--- a/views/index.jade
+++ b/views/index.jade
@@ -3,32 +3,31 @@ extends layout
 block content
 
     //- SECCIÓN PARA MOSTRAR LAS TAREAS
-
-    form.border.border-dark.border-5.rounded.d-flex.justify-content-center.align-items-center.text-white(action="/realizar" method="post" style="background-color: #7890a8; margin:auto;")
-        table.table.table-stripped.table-bordered
+    form
+    div.border.border-dark.border-5.rounded(style="background-color: #7890a8;")
+        table.table.table-stripped.table-bordered.border-dark.align-items-center.text-white(style="background-color: #7890a8;")
             tr
                 td.fs-6.text-center.bg-primary.text-white Nombre 
                 td.fs-6.text-center.bg-primary.text-white Categoría
                 td.fs-6.text-center.bg-primary.text-white Fecha 
                 td.fs-6.text-center.bg-primary.text-white Estado
                 td.fs-6.text-center.bg-primary.text-white Eliminar
-
             if(typeof tasks === "undefined")
                tr
                    td 
             else
                each task in tasks
                    tr
-                       td.text-dark #{task.name} 
-                       td.text-dark #{task.category}
+                       td.text-dark.text-center.align-middle #{task.name} 
+                       td.text-dark.text-center.align-middle #{task.category}
                        - let date = new Date(task.date);
                        - let day = date.getDate();
                        - let month = date.getMonth() + 1;
                        - let year = date.getFullYear();
                            - if (month <= 9) { month = "0" + month  };
-                       td.text-dark #{day + "/" + month + "/" + year }
-                       td.text-dark
-
+                           - if (day <= 9) { day = "0" + day  };
+                       td.text-dark.text-center.align-middle #{day + "/" + month + "/" + year }
+                       td.text-dark.text-center.align-middle
                             //- SECCIÓN PARA COMPLETAR LAS TAREAS 
                             form(action="/realizar" method="post")
                                 button.btn.btn-info.d-flex.m-auto.text-dark(name="#{task.id}" type="submit") Completar
@@ -41,7 +40,6 @@ block content
                                 input(type="checkbox" name="#{task.id}" value="#{!task.completed}", checked=task.completed)
                                 label #{task.id}
                         td
-
                             //- SECCIÓN PARA ELIMINAR LAS TAREAS
                             form(action="/eliminar" method="post")
-                                button.d-flex.btn.btn-danger.m-auto(name="#{task.id}" type="submit") Eliminar
+                                button.d-flex.btn.btn-danger.mt-2.m-auto(name="#{task.id}" type="submit") Eliminar
