fix: estilos/width

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
 
     //- SECCIÓN PARA MOSTRAR LAS TAREAS
     form
-    div.border.border-dark.border-5.rounded(style="background-color: #7890a8;")
+    div.d-flex.m-auto.border.border-dark.border-5.rounded(style="background-color: #7890a8; width:60vw;")
         table.table.table-stripped.table-bordered.border-dark.align-items-center.text-white(style="background-color: #7890a8;")
             tr
                 td.fs-6.text-center.bg-primary.text-white Nombre 
