--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,7 +16,7 @@ html
     br
     br
 
-    div.border.border-dark.border-5.rounded(class="estilo_personalizado" style="margin:auto;")
+    div.border.border-dark.border-5.rounded(class="estilo_personalizado" style="margin:auto; width:60vw;")
         table.table.table-stripped.table-bordered.border-dark
             tr
                 td.fs-6.text-center.bg-primary.text-white(colspan="3") Panel de tareas
